force-app/main/default/objects/Data_Load_Legacy_Skill__c/Data_Load_Legacy_Skill__c.object-meta.xml
<CustomObject>
    <description>Temporary object which will be used the Legacy BH Legacy Skill Extractor to store success and failure.</description>
    <label>Data Load Legacy Skill</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Load Legacy Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>