force-app/main/default/objects/Data_Load_Legacy_Skill__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Job object</description>
    <inlineHelpText>Link to Job object</inlineHelpText>
    <label>Job</label>
    <referenceTo>TR1__Job__c</referenceTo>
    <relationshipName>DataLoad_LegacySkills</relationshipName>
    <type>Lookup</type>
</CustomField>